--- a/127.0.0.1%3A5500/css/style.css
+++ b/127.0.0.1%3A5500/css/style.css
@@ -12,13 +12,14 @@ html {
   max-width: 1000px;
   margin: auto;
   padding: 40px;
+  background-color: #f8b731a5;
   font-family: "Lato", sans-serif;
 }
 
 .header {
   margin: 20px auto;
   font-weight: bold;
-  color: #563a02;
+  color: #8b661b;
 }
 
 .button {
@@ -26,20 +27,20 @@ html {
   padding: 5px;
   margin: 20px auto;
   font-size: 10px;
-  background-color: #563a02;
+  background-color: #e1a01e;
   border: 1px solid #8b661b;
   border-radius: 10px;
-  box-shadow: 3px 3px 10px 0px #563a02;
+  box-shadow: 3px 3px 10px 0px #a27720;
 }
 
 .dark {
-  background: #000000;
+  background: #393838;
 }
 
 .title {
   margin: 10px auto;
-  color: #563a02;
-  text-shadow: 1px 1px 3px #563a02;
+  color: #8b661b;
+  text-shadow: 1px 1px 5px #a27720;
   font-weight: normal;
   font-size: 50px;
 }
@@ -47,10 +48,18 @@ html {
 .main__image {
   width: 250px;
   margin: 20px auto;
-  box-shadow: 3px 3px 10px 0px #563a02;
+  box-shadow: 3px 3px 10px 0px #a27720;
   border-radius: 10px;
 }
 
-
+.footer {
+  margin: 75px auto;
+  padding: 10px;
+  color: #fff;
+  text-align: center;
+  background-color: #ba8b2c;
+  border: 1px solid #8b661b;
+  border-radius: 10px;
+}
 
 
