--- a/css/article.css
+++ b/css/article.css
@@ -4,11 +4,11 @@
   border-radius: 10px;
   background-color: #fff;
   padding: 10px 30px 30px 50px;
-  box-shadow: 3px 3px 10px 0px #a27720;
+  box-shadow: 3px 3px 10px 0px #563a02;
 }
 
 .article__heading {
-  color: #8b661b;
+  color: #563a02;
   font-weight: normal;
   text-shadow: 1px 1px 5px #bdbaba;
 }
