--- a/css/contact.css
+++ b/css/contact.css
@@ -1,14 +1,16 @@
 .contact {
-    color: #8b661b;
+    color: #563a02;
   }
   
   .contact__heading {
+    color:#563a02;
     margin: 10px auto;
-    font-weight: normal;
+    font-weight: bold;
     font-size: 30px;
   }
   
   .contact__link {
-    color: #8b661b;
+    color: #563a02;
     text-decoration: none;
+    font-weight: bold;
   }
