--- a/css/footer.css
+++ b/css/footer.css
@@ -3,7 +3,8 @@
     padding: 10px;
     color: #fff;
     text-align: center;
-    background-color: #ba8b2c;
+    background-color: #563a02a3;
     border: 1px solid #8b661b;
     border-radius: 10px;
+    box-shadow: 3px 3px 10px 0px #563a02;
   }
