--- a/css/navigation.css
+++ b/css/navigation.css
@@ -1,7 +1,7 @@
 .navigation {
-  background-color: #ba8b2c;
+  background-color: #563a02a3;
   border: 1px solid #8b661b;
-  box-shadow: 3px 3px 10px 0px #a27720;
+  box-shadow: 3px 3px 10px 0px #563a02;
   border-radius: 10px;
 }
 
