--- a/css/contact.css
+++ b/css/contact.css
@@ -1,16 +1,11 @@
-.contact {
-    color: #563a02;
-  }
-  
   .contact__heading {
-    color:#563a02;
     margin: 10px auto;
     font-weight: bold;
     font-size: 30px;
   }
-  
+
   .contact__link {
-    color: #563a02;
+    color: #000000;
     text-decoration: none;
     font-weight: bold;
   }
