--- a/css/style.css
+++ b/css/style.css
@@ -55,11 +55,10 @@ body {
     padding: 10px;
     color: #fff;
     text-align: center;
-    background-color: #ba8b2c;
+    background-color: #02258d90;
     border: 1px solid #8b661b;
     border-radius: 10px;
   }
-
 
 
 
