--- a/css/navigation.css
+++ b/css/navigation.css
@@ -1,5 +1,5 @@
 .navigation {
-  background-color: #02258d90;
+  background-color: #02258d;
   border: 1px solid #8b661b;
   box-shadow: 3px 3px 10px 0px #563a02;
   border-radius: 10px;
