--- a/css/navigation.css
+++ b/css/navigation.css
@@ -3,17 +3,14 @@
   border: 1px solid #8b661b;
   box-shadow: 3px 3px 10px 0px #563a02;
   border-radius: 10px;
-}
-
-.navigation__list {
-  list-style: none;
-}
-
-.navigation__item {
-  margin: 5px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
 .navigation__link {
+  padding: 20px;
   color: #fff;
   text-decoration: none;
 }
