--- a/css/style.css
+++ b/css/style.css
@@ -12,17 +12,13 @@ body {
   max-width: 1200px;
   margin: auto;
   padding: 40px;
-  font-family: "Lato", sans-serif;
-  background-image: url("../images/clouds.png");
-  background-size: cover;
-
+  font-family: "Montserrat", sans-serif;
+  background-color: hsl(0, 0%, 84%);
 }
 
 .header {
-  color: #fff;
   margin: 20px auto;
   font-weight: bold;
-  text-shadow: 1px 1px 3px #563a02;
 }
 
 .button {
@@ -30,47 +26,35 @@ body {
   padding: 5px;
   margin: 20px auto;
   font-size: 10px;
-  background-color: #02258d;
-  border: 1px solid #02258d90;
+  background-color: black;
   border-radius: 10px;
-  box-shadow: 3px 3px 10px 0px #563a02;
-  transition: 1s;
+  border: none;
+  box-shadow: 3px 3px 10px 0px hsl(0, 0%, 30%);
+  transition: 0.5s;
 }
 
 .button:hover {
-  background: hsl(225, 97%, 50%);
-  transform: scale(1.1);
+  background: hsl(0, 0%, 40%);
+  transform: scale(1.05);
 }
 
 .dark {
-  background-image: url("../images/fire.png");
-  background-size: cover;
+  background-color: rgb(75, 75, 75);
 }
 
 .title {
-  color: #fff;
   margin: 10px auto;
-  text-shadow: 1px 1px 3px #563a02;
-  font-weight: normal;
-  font-size: 50px;
+  font-weight: bold;
+  font-size: 30px;
 }
 
 .image {
-  max-width: 250px;
-  height: 250px;
-  border: 10px solid #02258d;
+  max-width: 300px;
+  height: 300px;
   background-image: url("../images/ryszardFron.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  box-shadow: 3px 3px 10px 0px #563a02;
+  box-shadow: 3px 3px 10px 0px hsl(0, 0%, 30%);
   border-radius: 10px;
-  transition: 1s;
 }
-
-
-.image:hover {
-  transform: translatex(100%) rotate(360deg) scale(1.1);
-  border-color: hsl(225, 96%, 50%);
-  background-image: url("../images/J16.png");
-  }
