--- a/css/article.css
+++ b/css/article.css
@@ -1,8 +1,7 @@
 .article {
-  margin: 50px auto;
+  margin:  auto;
   border: none;
-  border-radius: 10px;
-  background-color: #fff;
+  background-color: hsl(0, 0%, 100%);
   padding: 10px 30px 30px 50px;
   box-shadow: 3px 3px 10px 0px hsl(0, 0%, 30%);
   text-align: justify;
