--- a/css/footer.css
+++ b/css/footer.css
@@ -3,7 +3,7 @@
     padding: 10px;
     color: #fff;
     text-align: center;
-    background-color: #02258d;
-    border: 1px solid #8b661b;
-    border-radius: 10px;
+    background-color: #000000;
+    border:none;
+  
   }
