--- a/css/contact.css
+++ b/css/contact.css
@@ -1,11 +1,12 @@
   .contact__heading {
     color: #fff;
-    margin: 10px auto;
+    margin: 50px;
     font-weight: bold;
     font-size: 30px;
   }
 
   .contact__link {
+    margin: 50px;
     color: #fff;
     text-decoration: none;
     font-weight: bold;
