--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ html {
 
 body {
   font-family: "Montserrat", sans-serif;
-  background-color: #85888f;
+  background-color: #e4e6eb;
   max-width: 1200px;
   margin: auto;
 }
