changed css flex

--- a/css/section.css
+++ b/css/section.css
@@ -86,7 +86,7 @@
 
 .section__element {
   display: flex;
-  flex-direction: row;
+  flex-direction: row-reverse;
   justify-content: space-between;
   flex-wrap: wrap;
 }
