--- a/css/article.css
+++ b/css/article.css
@@ -1,20 +1,21 @@
 .article {
   display: flex;
+  flex-wrap: wrap;
   align-content: center;
+  text-align: justify;
+  word-break: break-word;
   margin: 20px auto 75px;
   border: none;
   background-color: hsl(0, 0%, 100%);
   padding: 30px;
   box-shadow: 3px 3px 10px 0px hsl(0, 0%, 30%);
-  text-align: justify;
-  word-break: break-word;
+ 
 }
 
 .article__image {
-  max-width: 250px;
-  max-height: 250px;
+  align-self: center;
   margin: 30px;
-  background-position: center;
+
   box-shadow: 3px 3px 10px 0px hsl(0, 0%, 30%);
   border-radius: 10px;
 }
@@ -25,6 +26,8 @@
 }
 
 .article__paragraph {
+  flex-basis: 800px;
+  flex-grow: 1;
   padding: 20px;
   font-size: 16px;
   line-height: 1.5;
