--- a/css/article.css
+++ b/css/article.css
@@ -4,7 +4,7 @@
   justify-content:center;
   text-align: justify;
   word-break: break-word;
-  margin: 20px auto 75px;
+  margin: auto;
   border: none;
   background-color: hsl(0, 0%, 100%);
   padding: 30px;
