--- a/css/button.css
+++ b/css/button.css
@@ -1,27 +1,20 @@
-.button {
-    display: flex;
-    justify-content: right;
-    margin: 20px;
-  }
-  
-  .button__button {
-    color: white;
-    padding: 10px;
-    font-size: 10px;
-    background-color: black;
-    border-radius: 10px;
-    border: none;
-    box-shadow: 3px 3px 10px 0px hsl(0, 0%, 30%);
-    transition: 0.5s;
-  }
-  
-  .button__button:hover {
-    background: #0442fb;
-    transform: scale(1.05);
-  }
-  
-  .dark {
-    background-color: #2c2f36;
-    color:white;
-  }
-  
+.button__button {
+  color: white;
+  padding: 10px;
+  font-size: 10px;
+  background-color: rgb(48, 47, 47);
+  border-radius: 10px;
+  border: none;
+  box-shadow: 3px 3px 10px 0px hsl(0, 0%, 30%);
+  transition: 0.2s;
+}
+
+.button__button:hover {
+  background: #465581;
+  transform: scale(1.05);
+}
+
+.dark {
+  background-color: #2c2f36;
+  /* color: white; */
+}
