--- a/css/media.css
+++ b/css/media.css
@@ -1,6 +1,19 @@
-@media (max-width: 768px) {
-    .navigation {
-      flex-direction: column;
-      align-content: stretch;
-    }
+@media (max-width: 767px), (max-width: 992px) {
+  .header {
+    flex-direction: column;
+  }
+
+  .button {
+    align-self: center;
+  }
+
+  .navigation {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .section__element {
+
+    flex-direction: column-reverse;
+  }
 }
