--- a/css/contact.css
+++ b/css/contact.css
@@ -5,7 +5,7 @@
   }
 
   .contact__link {
-    color:black;
+    color: #000;
     margin: 50px;
     text-decoration: none;
     font-weight: bold;
