--- a/css/button.css
+++ b/css/button.css
@@ -1,20 +1,21 @@
 .button__button {
-  color: white;
+  color: #fff;
   padding: 10px;
   font-size: 10px;
-  background-color: rgb(48, 47, 47);
+  font-weight: bold;
+  background-color: #302f2f;
   border-radius: 10px;
   border: none;
-  box-shadow: 3px 3px 10px 0px hsl(0, 0%, 30%);
+  box-shadow: 3px 3px 10px 0px #4d4d4d;
   transition: 0.2s;
 }
 
 .button__button:hover {
-  background: #465581;
+  background: #ac3939;
   transform: scale(1.05);
 }
 
-.dark {
-  background-color: #2c2f36;
-  /* color: white; */
+.button__dark {
+  background-color: #fff;
+  color: #000;
 }
